k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: afyatrack-ke
  labels:
    name: afyatrack-ke
