k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: afyatrack-service
  namespace: afyatrack-ke
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "3000"
spec:
  selector:
    app: afyatrack-web
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: NodePort
